--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Grocerymart</title>
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg" />
+        <link
+            rel="icon"
+            type="image/png"
+            href="./assets/favicons/favicon-96x96.png"
+            sizes="96x96"
+        />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="./assets/favicons/favicon.svg"
+        />
         <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicons/apple-touch-icon.png"
+        />
         <link rel="manifest" href="./assets/favicons/site.webmanifest" />
         <script src="./assets/js/scripts.js"></script>
-        <link rel="stylesheet" href="./assets/css/main.css">        
+        <link rel="stylesheet" href="./assets/css/main.css" />
     </head>
     <body>
         <header id="header" class="header">Tao là header</header>
         <script>
-            load("#header", "../templates/header.html")
+            load("#header", "../templates/header.html");
         </script>
 
         <h1>Main Content</h1>
 
-
         <footer id="footer">Tao la Footer</footer>
         <script>
-            load("#footer", "../templates/footer.html")
+            load("#footer", "../templates/footer.html");
         </script>
     </body>
 </html>
