--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <script>
             load("#header", "../templates/header.html");
         </script>
-
-        <h1>Main Content</h1>
+        <div class="container">
+            <h1>Main Content</h1>
+        </div>
 
         <footer id="footer">Tao la Footer</footer>
         <script>
