fix header & footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <header id="header" class="header">Tao là header</header>
         <script>
-            load("#header", "../templates/header.html");
+            load("#header", "./templates/header.html");
         </script>
         <div class="container">
             <h1>Main Content</h1>
@@ -36,7 +36,7 @@
 
         <footer id="footer">Tao la Footer</footer>
         <script>
-            load("#footer", "../templates/footer.html");
+            load("#footer", "./templates/footer.html");
         </script>
     </body>
 </html>
