--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>Main Content</h1>
         </div>
 
-        <footer id="footer">Tao la Footer</footer>
+        <footer id="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
         </script>
